#7871 In static width mode, choices with a long text overlaps a question's area Fixes #7871

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -2,6 +2,9 @@
   position: relative;
 }
 
+.sd-question__content {
+  overflow-x: auto;
+}
 .sd-element__erbox--above-element {
   margin-bottom: calcSize(1);
 }
